--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/peach.ico">
   <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="author" content="862317431">
 
-  <title>John Doe - Business Administration</title>
+  <title>Angelina Lopez - First Year Undergrad in Business Economics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Angelina Lopez</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/firstnamelastname.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,25 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Angelina Lopez
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Undergrad in Business Economics📚</div>
+        <p class="lead mb-4">My name is Angelina Lopez and I am majoring in Business Economicst pursue a career as an accountant or budget analyst.<br><br>
 
-        Enter bio here<br><br>
+        I am a first generation college student that hopes I can set an example for future generation of hispanic students to pursue an education in any four year university or college.<br><br>
 
-        Enter bio here
         </p>
         <div class="social-icons">
           <a target="_blank" id="socialicon-1" href="https://linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/Angeljlo">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/Angie83661534">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:alope622@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,12 +91,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
+            <h3 class="mb-0">Undergrad in Business Economics</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Been part of the Puente Program before entering UCR<br> 
+              • Also, been a part of art club<br>
+              • Played club soccer<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -152,8 +151,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Masters of Business Economics</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2018 - December 2019</span>
@@ -167,7 +165,7 @@
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2025</span>
           </div>
         </div>
 
@@ -191,7 +189,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG_20200610_150332 (1).jpg" width="500px">
+            <img src="img/PXL_20210518_085932830_2 (1).jpg" width="500px"><br>
+            <img src="img/PXL_20210519_195105270.PORTRAIT_3 (1).jpg">
+            <img src="img/PXL_20210519_205652974.PORTRAIT_2 (1).jpg"><br>
         </center>
       </div>
     </section>
@@ -199,7 +200,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Angelina Lopez</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
